refactor(user-data): simplify user fetching logic and improve batch loading